[package]
name = "systick-timebase"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
fugit = "0.3"
cortex-m = "0.7"
cortex-m-rt = {version = "0.7", optional = true}
atomic-polyfill = {version = "0.1", optional = true}

[features]
container-u64 = []
extended = ["cortex-m-rt", "atomic-polyfill"]

[dev-dependencies]
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"

[package.metadata.cargo-all-features]
denylist = ["cortex-m-rt", "atomic-polyfill"]
