[package]
name = "systick-timebase"
repository = "https://github.com/TDHolmes/systick-timebase"
description = """A clock reference based on the SysTick peripheral implemented in ARM cortex-M chips
optionally extended to 32 or 64 bit resolution."""
keywords = ["clock", "systick", "arm", "cortex-m", "no-std"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
# exclude files only relevant to local building of examples
exclude = ["build.rs", ".cargo/*", ".github/*", "examples/*", "memory.x"]

[dependencies]
fugit = "0.3"
cortex-m = "0.7"
embedded-hal = {version = "0.2", optional = true}
cortex-m-rt = {version = "0.7", optional = true}
atomic-polyfill = {version = "1.0", optional = true}

[features]
container-u64 = []
extended = ["cortex-m-rt", "atomic-polyfill"]

[dev-dependencies]
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2"

[[example]]
name = "test_delay"
required-features = ["embedded-hal"]

[package.metadata.cargo-all-features]
denylist = ["cortex-m-rt", "atomic-polyfill"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [
    "thumbv6m-none-eabi",
    "thumbv7m-none-eabi",
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv8m.base-none-eabi",
    "thumbv8m.main-none-eabi",
    "thumbv8m.main-none-eabihf",
]
all-features = true
